# project_rust

./: .gitignore  Cargo.toml  shuttle.toml
.github/workflows/: rust.yml
custom/: Cargo.toml
custom/src/: custom_error.rs  custom_middleware.rs  custom_response.rs  lib.rs
custom_response/: Cargo.toml
custom_response/src/: lib.rs
custom_response/src/error/: error.rs
src/: main.rs
